# Lightning

./: .clang-format  .clang-tidy  .gitignore  BUILD.bazel  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  MODULE.bazel  README.md  WORKSPACE  conanfile.py
.github/workflows/: bazel-build-and-test-platform.yml  cmake-build-and-test-platform.yml  cmake-multi-platform.yml
UnitTest/: UT_Attribute.cpp  UT_Core.cpp  UT_DateTime.cpp  UT_DispatchTimeFormatting.cpp  UT_GeneralFormatting.cpp  UT_Logger.cpp  UT_MsgFormatter.cpp  UT_RecordFormatter.cpp  UT_SegmentStorage.cpp  UT_TypeTraits.cpp  UT_Utility.cpp
UnitTest/internal/: main.cpp  testing.h
applications/: BUILD.bazel  CMakeLists.txt  profile-greased-lightning.cpp  profile-lightning.cpp  profile-table-generation.cpp
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/: BUILD.bazel
include/Lightning/: GreasedLightning.h  Lightning.h  Plotting.h
include/Lightning/support/: make_figure.py
test/: BUILD.bazel  CMakeLists.txt  UT_Core.cpp  UT_DateTime.cpp  UT_DispatchTimeFormatting.cpp  UT_FormatterBySeverity.cpp  UT_Formatting.cpp  UT_GeneralFormatting.cpp  UT_HybridVector.cpp  UT_Logger.cpp  UT_MemoryBuffer.cpp  UT_MsgFormatter.cpp  UT_Plotting.cpp  UT_RecordFormatter.cpp  UT_SegmentStorage.cpp  UT_SeveritySet.cpp  UT_Sink.cpp  UT_TypeTraits.cpp  UT_Utility.cpp  test.bzl
test/setup/: main.cpp
test/source/: UT_Core.cpp
